
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int doit (int,char*,char*,char*,char*) ;
 int exit (int) ;
 int fprintf (int ,char*) ;
 int openhost (char*) ;
 int printf (char*) ;
 int stderr ;
 int usage (char*) ;

int main (int argc, char*argv[]) {

  int port,sock;
  char *target,*printer,*user,*userhost;

  port = 0;
  target = printer = user = userhost = ((void*)0);

  fprintf(stderr,"'lpd-mail.c' - Gus'98 with mods by Gamma\n");
  if (argc < 5) usage(argv[0]);

  printf("Start !!!!!!!!!!!!\n");
  target = argv[1];
  printer = argv[2];
  user = argv[3];
  userhost = argv[4];
  if ((sock = openhost(target)) > 0) {
    exit(doit(sock,printer,target,user,userhost));
  } else {
    exit(sock);
  }
}
